--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -1,9 +1,100 @@
 {
   "app_name": "StayReady",
+  "common": {
+    "search": "தேடல்",
+    "cancel": "ரத்துசெய்",
+    "proceed": "தொடரவும்",
+    "error": "பிழை"
+  },
+
   "home": {
     "your_location": "உங்கள் இருப்பிடம்",
-    "no_hazards": "அபாயங்கள் எதுவும் இல்லை",
-    "stay_alert": "எச்சரிக்கையுடன் இருங்கள், பாதுகாப்பாக இருங்கள்"
+    "region": "பகுதி",
+
+    "donate": {
+      "title": "ஒவ்வொரு\nநொடியும்\nமுக்கியம்",
+      "cta": "தானம் செய்",
+      "error_try_later": "பின்னர் மீண்டும் முயற்சிக்கவும்.",
+      "error_open": "நன்கொடைப் பக்கத்தைத் திறக்க முடியவில்லை."
+    },
+
+    "section": {
+      "emergencies_info": "அவசரத் தகவல்"
+    },
+
+    "map": {
+      "placeholder": "சிங்கப்பூர் வரைபடம் (நிலையானது)"
+    },
+
+    "hazard": {
+      "none": "அபாயம் எதுவும் கண்டறியப்படவில்லை",
+      "slogan": "எச்சரிக்கையுடன் இருங்கள்,\nபாதுகாப்பாக இருங்கள்"
+    },
+
+    "contacts": {
+      "title": "அவசர தொடர்புகள்",
+      "note": "பேரழிவு அல்லது அவசரநிலையில் மட்டும் இந்த எண்களை அழைக்கவும்.",
+      "card": {
+        "sos":   { "title": "SOS",  "subtitle": "உச்ச சத்தமுள்ள\nஅவசர எச்சரிக்கையை\nஇயக்கவும்" },
+        "995":   { "title": "995",  "subtitle": "SCDF அவசர ஆம்புலன்ஸ்\n/ தீயணைப்பு" },
+        "999":   { "title": "999",  "subtitle": "SPF அவசர போலீஸ்\nநடவடிக்கை" },
+        "1777":  { "title": "1777", "subtitle": "அவசரமற்ற\nஆம்புலன்ஸ்" }
+      }
+    },
+
+    "early": {
+      "title": "முன்னெச்சரிக்கை",
+      "subtitle": "பொதுவான அபாயங்களை கண்காணிக்கிறது"
+    },
+
+    "see_more": "மேலும் பார்க்க",
+
+    "prep": {
+      "title": "அபாயத்திற்கான தயார்",
+      "subtitle": "எந்த அவசரநிலைக்கும் பாதுகாப்பு குறிப்புகள் கற்றுக்கொள்ளுங்கள்.",
+      "topic": {
+        "flood": "திடீர் வெள்ளம்",
+        "haze": "மூடுபனி (PM2.5)",
+        "storm": "இடி மின்னலுடன் கூடிய மழை",
+        "dengue": "டெங்கு தடுப்பு",
+        "wind": "வலுவான காற்று",
+        "aid": "CPR & முதலுதவி",
+        "fire": "தீ பாதுகாப்பு",
+        "kit": "அவசரக் கருவிகள்",
+        "disease": "நோய் பரவல்",
+        "earthquake": "நிலநடுக்கம்"
+      }
+    },
+
+    "routine": {
+      "title": "தினசரி தயாரிப்புகள்",
+      "subtitle": "நீங்களும் குடும்பமும் பாதுகாப்பாக இருக்க தினசரி தயாராக இருங்கள்.",
+      "card": {
+        "checklist": "StayReady சரிபார்ப்பு பட்டியல்",
+        "external": "வெளிப்புற வளங்கள்",
+        "quiz": "பாதுகாப்பு வினாடி வினா"
+      }
+    },
+
+    "confirm_call_title": "{{title}} எண்ணிற்கு அழைக்கவா?",
+    "confirm_call_body": "{{number}} முன்கூட்டியே நிரப்பப்பட்டவாறு தொலைபேசி பயன்பாட்டைத் திறக்கவா?",
+    "call_manual": "தயவுசெய்து {{num}} எண்ணை கைமுறையாக அழைக்கவும்.",
+    "dial_error": "தொலைபேசி டயலரைத் திறக்க முடியவில்லை."
+  },
+  "nav": {
+    "sos": "SOS",
+    "resource": "வளங்கள்",
+    "home": "முகப்பு",
+    "games": "விளையாட்டுகள்",
+    "more": "மேலும்"
+  },
+  "drawer": {
+    "checklist": "சரிபார்ப்பு பட்டியல்",
+    "external_resources": "வெளிப்புற வளங்கள்",
+    "bookmark": "புக் மார்க்",
+    "badge_reward": "பேட்ஜ் & பரிசு",
+    "settings": "அமைப்புகள்",
+    "logout": "வெளியேறு"
   },
   "settings": {
     "title": "அமைப்புகள்",
@@ -22,9 +113,11 @@
     "change_password": "கடவுச்சொல்லை மாற்று",
     "logout": "வெளியேறு",
     "done": "முடிந்தது",
-    "cancel": "ரத்து"
+    "cancel": "ரத்து",
+    "theme_light": "ஒளிர்வு",
+    "theme_dark": "இருள்"
   },
-    "sos": {
+  "sos": {
     "title": "SOS அவசர",
     "tap_to": "{{action}} செய்ய தட்டவும்",
     "alert": "எச்சரிக்கை தொடங்கு",
@@ -44,5 +137,21 @@
 
     "button_sos": "SOS",
     "button_stop": "STOP"
+  },
+  "resource": {
+    "title": "வள மையம்",
+    "tagline": "எந்த சூழலுக்கும் தயார் இருங்கள் — பேரிடர்களுக்கு முன் தயாராக, அவசரநிலைகளில் செயல்பட, மற்றும் எந்நேரமும் பாதுகாப்பாக இருக்க வழிகாட்டிகள், குறிப்புகள், தொடர்புகளை ஆராயுங்கள்.",
+    "prep_titles": {
+      "flood": "திடீர் வெள்ளம்",
+      "haze": "மூடுபனி (PM2.5)",
+      "storm": "இடியுடன் கூடிய மழை",
+      "dengue": "டெங்கு தடுப்பு",
+      "wind": "பலத்த காற்று",
+      "aid": "CPR & முதலுதவி",
+      "fire": "தீ பாதுகாப்பு",
+      "kit": "அவசரக் கிட்கள்",
+      "disease": "நோய் பரவல்",
+      "earthquake": "நிலநடுக்கம்"
+    }
   }
 }
