--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -153,5 +153,25 @@
       "disease": "நோய் பரவல்",
       "earthquake": "நிலநடுக்கம்"
     }
+  },
+  "games": {
+    "title": "பாதுகாப்பு வினாடி வினா",
+    "subtitle": "உங்களின் தயார்நிலை திறன்களைச் சோதிக்கவும்.",
+    "stats": {
+      "taken": "எடுத்த வினாடி வினாக்கள்",
+      "accuracy": "சமீபத்திய துல்லியம்",
+      "streak": "தொடர் நாட்கள்"
+    },
+    "daily": {
+      "title": "தினசரி சவால்",
+      "review_title": "தினசரி சவால் — மதிப்பாய்வு",
+      "category_label": "தினசரி",
+      "loading": "ஏற்றுகிறது...",
+      "review_answer": "பதில்களைப் பார்வையிடு",
+      "start": "சவாலை தொடங்கு",
+      "questions_count": "{{count}} கேள்விகள்"
+    },
+    "quick_tips": "வேகக் குறிப்புகள்",
+    "categories_quiz": "பிரிவு வினாடி வினா"
   }
 }
