--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -4,7 +4,9 @@
     "search": "தேடல்",
     "cancel": "ரத்துசெய்",
     "proceed": "தொடரவும்",
-    "error": "பிழை"
+    "error": "பிழை",
+    "close": "மூடு",
+    "see_more": "மேலும் பார்க்க"
   },
 
   "home": {
@@ -35,10 +37,16 @@
       "title": "அவசர தொடர்புகள்",
       "note": "பேரழிவு அல்லது அவசரநிலையில் மட்டும் இந்த எண்களை அழைக்கவும்.",
       "card": {
-        "sos":   { "title": "SOS",  "subtitle": "உச்ச சத்தமுள்ள\nஅவசர எச்சரிக்கையை\nஇயக்கவும்" },
-        "995":   { "title": "995",  "subtitle": "SCDF அவசர ஆம்புலன்ஸ்\n/ தீயணைப்பு" },
-        "999":   { "title": "999",  "subtitle": "SPF அவசர போலீஸ்\nநடவடிக்கை" },
-        "1777":  { "title": "1777", "subtitle": "அவசரமற்ற\nஆம்புலன்ஸ்" }
+        "sos": {
+          "title": "SOS",
+          "subtitle": "உச்ச சத்தமுள்ள\nஅவசர எச்சரிக்கையை\nஇயக்கவும்"
+        },
+        "995": {
+          "title": "995",
+          "subtitle": "SCDF அவசர ஆம்புலன்ஸ்\n/ தீயணைப்பு"
+        },
+        "999": { "title": "999", "subtitle": "SPF அவசர போலீஸ்\nநடவடிக்கை" },
+        "1777": { "title": "1777", "subtitle": "அவசரமற்ற\nஆம்புலன்ஸ்" }
       }
     },
 
@@ -173,5 +181,18 @@
     },
     "quick_tips": "வேகக் குறிப்புகள்",
     "categories_quiz": "பிரிவு வினாடி வினா"
+  },
+  "preparedness_screen": {
+    "preparedness_word": "தயார்நிலை",
+    "title_suffix": "{{title}} தயார்நிலை",
+    "why_title": "{{topic}} ஏன் நிகழ்கிறது",
+    "quick_facts": "விரைவு தகவல்கள் (புள்ளிவிவரங்கள்)",
+
+    "interactive_learning": "இணையச் கற்றல்",
+    "interactive_title": "உங்கள் அறிவைச் சோதிக்கவும்",
+    "interactive_sub": "பாதுகாப்பாக இருப்பது குறித்து\nநீங்கள் எவ்வளவு அறிந்திருக்கிறீர்கள் என்பதைப் பாருங்கள்.",
+    "interactive_cta": "விளையாடு & கற்பீர்",
+
+    "external_resources": "வெளியக வளங்கள்"
   }
 }
