--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -187,12 +187,54 @@
     "title_suffix": "{{title}} தயார்நிலை",
     "why_title": "{{topic}} ஏன் நிகழ்கிறது",
     "quick_facts": "விரைவு தகவல்கள் (புள்ளிவிவரங்கள்)",
-
     "interactive_learning": "இணையச் கற்றல்",
     "interactive_title": "உங்கள் அறிவைச் சோதிக்கவும்",
     "interactive_sub": "பாதுகாப்பாக இருப்பது குறித்து\nநீங்கள் எவ்வளவு அறிந்திருக்கிறீர்கள் என்பதைப் பாருங்கள்.",
     "interactive_cta": "விளையாடு & கற்பீர்",
-
     "external_resources": "வெளியக வளங்கள்"
+  },
+  "location": {
+    "title": "இடம்",
+    "current_position": "தற்போதைய நிலை",
+    "fetching": "GPS இருப்பிடத்தை பெற்றுக் கொண்டிருக்கிறது…",
+    "coordinates": "இருப்பிடக் குறியீடுகள்",
+    "region": "பிராந்தியம்",
+    "demo_using": "சோதனைக்காக டெமோ இருப்பிடம் (Marina Bay) பயன்படுத்தப்படுகிறது.",
+    "refresh": "புதுப்பிக்க",
+    "testing": "சோதனை",
+    "demo_toggle_label": "சிங்கப்பூர் டெமோ இருப்பிடத்தை பயன்படுத்தவும்",
+    "demo_desc": "நீங்கள் வெளிநாட்டில் இருந்தாலும் சிங்கப்பூர் (Marina Bay) இருப்பிடத்தை உருவகப்படுத்த இதைப் இயக்குங்கள். இதனால் GPS போலி செய்யாமல் reverse-geocoding மற்றும் இடம் தொடர்பான அம்சங்களைச் சோதிக்கலாம்.",
+    "onemap_note": "உள்ளடக்கப்பட்ட டெமோ கணக்கின் மூலம் OneMap டோக்கன் தானாக பெறப்பட்டு சில நாட்களுக்கு இடைக்காலமாக சேமிக்கப்படும். வலையமைப்பு இல்லை எனில், பயன்பாடு கிழக்கு/மேற்கு/தெற்கு/வடக்கு/மத்திய போன்ற பொதுவான பிராந்திய குறிச்சொற்களுக்குத் திரும்பும்.",
+    "error_fetch": "இருப்பிடத்தை பெற முடியவில்லை.",
+    "region_names": {
+      "north": "வடக்கு",
+      "south": "தெற்கு",
+      "east": "கிழக்கு",
+      "west": "மேற்கு",
+      "central": "மத்திய"
+    }
+  },
+  "emergency_contacts": {
+    "title": "அவசர தொடர்புகள்",
+    "unnamed": "பெயரிடப்படாதது",
+    "empty_title": "இன்னும் அவசர தொடர்புகள் இல்லை",
+    "empty_sub": "குறைந்தபட்சம் ஒரு தொடர்பைச் சேர்க்கவும். SOS செயல்படுத்தப்படும் போது, முதலில் SMS அனுப்பப்படும். நீங்கள் ஆன்லைனில் இருந்தால், உங்கள் நேரடி இருப்பிட இணைப்புடன் WhatsApp செய்தியும் தயார் செய்யப்படும்.",
+    "add_contact": "தொடர்பைச் சேர்க்கவும்",
+    "delete_confirm_title": "தொடர்பை நீக்கவா?",
+    "delete_confirm_msg": "இந்த தொடர்பு உங்கள் அவசர தொடர்பு பட்டியலிலிருந்து நீக்கப்படும்.",
+    "delete": "நீக்கு"
+  },
+  "contact_editor": {
+    "title_add": "அவசர தொடர்பைச் சேர்க்கவும்",
+    "title_edit": "அவசர தொடர்பை திருத்து",
+    "label_name": "பெயர்",
+    "placeholder_name": "உதாரணம்: அம்மா",
+    "label_mobile": "கைபேசி எண் (சிங்கப்பூர் மட்டும்)",
+    "placeholder_digits": "9XXXXXXX",
+    "error_name_required": "தயவுசெய்து பெயரை உள்ளிடவும்.",
+    "error_digits_invalid": "செல்லுபடியாகும் சிங்கப்பூர் கைபேசி எண்னை உள்ளிடவும் (8 இலக்கங்கள், 8 அல்லது 9 கொண்டு தொடங்கும்).",
+    "error_number_invalid": "தவறான எண்.",
+    "save": "சேமி",
+    "cancel": "ரத்து"
   }
 }
